phone user logo fixed using text-align=right in dashboard.css + 500.html page made to delete cookies as well

--- a/static/Personal/CSS/dashboard.css
+++ b/static/Personal/CSS/dashboard.css
@@ -38,6 +38,7 @@ body {
 
     #account-name {
         width: 9em;
+        text-align: right;
     }
 }
 
